did some housekeeping cleaning + reuploaded new sketches

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,8 +1,9 @@
 ---
-title: "Investigating Trends of Absences in Toronto City Council Attendance between 2022 to 2024"
+title: "Investigating Trends of Absences in Toronto City Council Attendance between 2022 to 2026"
 subtitle: "Determining the Ideal Meeting Types and Months for the 2022-2026 Term"
 author: 
   - Wendy Yuan
+thanks: "GitHub repo link: https://github.com/kiwindyy/CityCouncilAttendance"
 date: "27 September 2024"
 date-format: long
 abstract: "This paper looks at Toronto City Council attendance data and when meeting absences are highest and lowest. As Toronto City Council members are elected, it is expected that they attend meetings to voice the opinions of the population. Examining the data found that alternating months and evenings have greater absences. By identifying trends of absences, meetings can be better schedules to optimize efficiency and attendance."
@@ -20,9 +21,8 @@ library(tidyverse)
 library(dplyr)
 
 cleaned_data <- read_csv(here::here("data/cleaned_data/cleaned_data.csv"))
+raw_data <- read_csv(here::here("data/raw_data/unedited_data.csv"))
 ```
-
-\newpage
 
 # Introduction
 
