--- a/paper/references.bib
+++ b/paper/references.bib
@@ -46,3 +46,11 @@ https://github.com/sharlagelfand/opendatatoronto/},
     pages = {1--25},
     url = {https://www.jstatsoft.org/v40/i03/},
   }
+
+@Manual{readr,
+    title = {readr: Read Rectangular Text Data},
+    author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+    year = {2024},
+    note = {R package version 2.1.5, https://github.com/tidyverse/readr},
+    url = {https://readr.tidyverse.org},
+  }
